haciendo la actividad primeros pasos con prisma

--- a/clasefacil/package.json
+++ b/clasefacil/package.json
@@ -12,6 +12,7 @@
     "codegen": "npx playwright codegen"
   },
   "dependencies": {
+    "@prisma/client": "^6.18.0",
     "next": "15.5.4",
     "react": "19.1.0",
     "react-dom": "19.1.0"
@@ -22,6 +23,7 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "prisma": "^6.18.0",
     "tailwindcss": "^4",
     "typescript": "^5"
   }
