--- a/clasefacil/package.json
+++ b/clasefacil/package.json
@@ -9,10 +9,14 @@
     "test": "npx playwright test",
     "test:report": "npx playwright show-report",
     "test:headed": "npx playwright test --headed",
-    "codegen": "npx playwright codegen"
+    "codegen": "npx playwright codegen",
+    "prisma:generate": "npx prisma generate",
+    "prisma:migrate": "npx prisma migrate dev",
+    "prisma:db:create": "npx prisma db push",
+    "prisma:studio": "npx prisma studio"
   },
   "dependencies": {
-    "@prisma/client": "^6.18.0",
+    "@prisma/client": "^6.19.0",
     "lucide-react": "^0.553.0",
     "next": "15.5.4",
     "react": "19.1.0",
@@ -24,7 +28,7 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "prisma": "^6.18.0",
+    "prisma": "^6.19.0",
     "tailwindcss": "^4",
     "typescript": "^5"
   }
