--- a/clasefacil/package.json
+++ b/clasefacil/package.json
@@ -17,6 +17,8 @@
   },
   "dependencies": {
     "@prisma/client": "^6.19.0",
+    "@radix-ui/react-slot": "^1.2.4",
+    "class-variance-authority": "^0.7.1",
     "lucide-react": "^0.553.0",
     "next": "15.5.4",
     "react": "19.1.0",
